<resources>
    <string name="app_name">Polynomials</string>
    <string name="welcome_to_our_polynomials_app">Welcome to our polynomials app!</string>
    <string name="choose_one_of_the_options">Choose one of the options:</string>
    <string name="add_polynomial">Add polynomial</string>
    <string name="delete_polynomial">Delete polynomial</string>
    <string name="update_an_exists_polynomial">Update an exists polynomial</string>
    <string name="search_an_exists_polynomial">Search an exists polynomial</string>
    <string name="exit">EXIT</string>
    <string name="search_function_number_by_the_id">Search function number by the id:</string>
    <string name="enter_id">Enter ID</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="enter_coefficient">Enter coefficient</string>
    <string name="add">Add</string>
    <string name="textview">TextView</string>
    <string name="enter_the_highest_exponent">Enter the highest exponent</string>
    <string name="add_function_id">Add function Id</string>
    <string name="add_new_polynomials">Add new polynomials</string>
    <string name="delete_a_polynomials">Delete a polynomials</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="update">Update</string>
    <string name="coefficient">Coefficient</string>
</resources>