<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateActivity">

    <TextView
        android:id="@+id/tvUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFC107"
        android:text="Update polynomials"
        android:textAlignment="center"
        android:textColor="#D81B60"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvChooseNumFunc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/search_function_number_by_the_id"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etIdFunc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:hint="@string/enter_id"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnSubmitId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/submit" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDeg"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="Degree"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etUpdateDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginTop="10dp"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCoef"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/coefficient"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etUpdateCoef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number|numberDecimal|numberSigned"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmitUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="#FFFFFF"
        android:backgroundTint="@color/material_dynamic_neutral_variant30"
        android:text="@string/update"
        android:visibility="gone"
        app:backgroundTint="#2196F3" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/back" />

</LinearLayout>